# matplotlib-cpp

./: .gitignore  CMakeLists.txt
cmake/: examples.cmake  matplotlib_cppConfig.cmake.in
examples/: basic.cpp  minimal.cpp
